--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  
+
+  <script type="module" src="./main.js"></script>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<h1>Boop</h1>
+	<canvas id="scene"></canvas>
 </body>
+
 </html>
