--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
 	<h1>Boop</h1>
-	<canvas id="scene"></canvas>
+	<div id="scene-container">
+    		<!-- Our <canvas> will be inserted here -->
+  	</div>
 </body>
 
 </html>
